01-america-2-main.tf
# AMerican 2nd network and subnetworks
resource "google_compute_network" "american2_network" {
  name                    = "american2-network"
  auto_create_subnetworks = false
}

resource "google_compute_subnetwork" "american2_subnet" {
  name          = "american-subnet2"
  ip_cidr_range = "172.16.1.0/24"
  region        = var.american2_region
  network       = google_compute_network.american2_network.id
}

resource "google_compute_instance" "american2-instance" {
  depends_on   = [google_compute_subnetwork.american2_subnet]
  name         = "american2-instance"
  machine_type = var.instance_type
  zone         = "${var.american2_region}-b"
  
  boot_disk {
    initialize_params {
      image = var.instance_image
    }

  }

  network_interface {
    network    = google_compute_network.american2_network.id
    subnetwork = google_compute_subnetwork.american2_subnet.id
    access_config {
      // Ephemeral IP, no external IP
    }
  }

 metadata = {
    startup-script = "#Thanks to Remo\n#!/bin/bash\n# Update and install Apache2\napt update\napt install -y apache2\n\n# Start and enable Apache2\nsystemctl start apache2\nsystemctl enable apache2\n\n# GCP Metadata server base URL and header\nMETADATA_URL=\"http://metadata.google.internal/computeMetadata/v1\"\nMETADATA_FLAVOR_HEADER=\"Metadata-Flavor: Google\"\n\n# Use curl to fetch instance metadata\nlocal_ipv4=$(curl -H \"$${METADATA_FLAVOR_HEADER}\" -s \"$${METADATA_URL}/instance/network-int [...]
  }

  tags = ["american2-instance", "vpn", "iam-ssh-allowed"]
}

# Peering between American and European Networks
resource "google_compute_network_peering" "american2_to_european_peering2" {
  name         = "american2-to-eu-peering2"
  network      = google_compute_network.american2_network.id
  peer_network = google_compute_network.european_network.id
}

resource "google_compute_network_peering" "european_to_american2_peering2" {
  name         = "eu-to-american2-peering2"
  network      = google_compute_network.european_network.id
  peer_network = google_compute_network.american2_network.id
}

resource "google_compute_firewall" "internal_http2" {
  name    = "internal-http2"
  network = google_compute_network.american2_network.id
  allow {
    protocol = "icmp"
  }
  allow {
    protocol = "tcp"
    ports    = ["80", "22"]
  }
  source_tags   = ["vpn"]
  source_ranges = ["172.16.1.0/24", "35.235.240.0/20"/*,"0.0.0.0/0"*/]
  target_tags   = ["american2-instance", "iap-ssh-allowed"/*,"open-to-all"*/]
}
